Revised Analytical Strategy description.

--- a/Workflow_Demonstration/Analyses/Demonstration_Analysis.ipynb
+++ b/Workflow_Demonstration/Analyses/Demonstration_Analysis.ipynb
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "# Examine 4-Plot to Check if Daughter's Family Size Has Unaccounted for Structure\n",
+    "# Examine 4-Plot to Check if Daughters' Family Size Has Unaccounted for Structure\n",
     "file_path = \"/mnt/d/GitHub_Repositories/Netanomics_Analysts_Collaborative_Environment/Workflow_Demonstration/Analyses/Figures/Two_Moms_4Plot.png\"\n",
     "img = Image.open(file_path)\n",
     "display(img)"
@@ -687,7 +687,7 @@
    "metadata": {},
    "source": [
     "<div style=\"font-size:10pt; font-weight:bold;\">Analytic Strategy</div>\n",
-    "<div style=\"font-size:10pt;\"> In the causal salad model, McElreath treats Mother and Daughter family sizes as arising from a multi-normal distribution. 𝑀 (Mothers' family size) and 𝐷 (Daughters' family size) are jointly modeled as arising from a multivariate normal distribution. This approach allows McElreath to account for the influence of an unmeasured variable 𝑈 that may simultaneously affect both 𝑀 and 𝐷. While 𝑈 is not explicitly included in the model, its effects are captured indirectly through the covariance structure of the multivariate normal. Specifically, the off-diagonal elements of the covariance matrix (Σ) represent the shared variability between 𝑀 and 𝐷 that could be attributed to 𝑈, such as socio-economic status,  cultural factors, or genetic influences in the Two Moms' example. By modeling 𝑀 and 𝐷 jointly, he isolates the direct effect of 𝑀 on 𝐷 (quantified by the parameter 𝑚) from this shared variability, reducing the risk of confounding. Additionally, this approach respects the fact that 𝑀 and 𝐷 are not independent and improves the robustness of the estimates for 𝑚 while still accounting for other covariates like birth order (𝐵1and 𝐵2).</div>"
+    "<div style=\"font-size:10pt;\">McElreath jointly models 𝑀 (Mothers' family size) and 𝐷 (Daughters' family size) as arising from a multivariate normal distribution. This approach allows him to account for the influence of an unmeasured variable 𝑈 that may simultaneously affect both 𝑀 and 𝐷. While 𝑈 is not explicitly included in the model, its effects are captured indirectly through the covariance structure of the multivariate normal. Specifically, the off-diagonal elements of the covariance matrix (Σ) represent the shared variability between 𝑀 and 𝐷 that could be attributed to 𝑈, such as socio-economic status,  cultural factors, or genetic influences in the Two Moms' example. By modeling 𝑀 and 𝐷 jointly, he isolates the direct effect of 𝑀 on 𝐷 (quantified by the parameter 𝑚) from this shared variability, reducing the risk of confounding. Additionally, this approach respects the fact that 𝑀 and 𝐷 are not independent and improves the robustness of the estimates for 𝑚 while still accounting for other covariates like birth order (𝐵1and 𝐵2). Here, I use Cholesky decomposition to address the high multicollineary between the covariates that otherwise results in poor sampling, reflected in low E-BFMI scores.</div>"
    ]
   },
   {
@@ -1057,7 +1057,7 @@
    ],
    "source": [
     "%%R\n",
-    "#   Look at how the ranking of MCMC samples mixed between chains for Alpha.\n",
+    "#   Look at how the ranking of MCMC samples mixed between chains for Mothers' intercept.\n",
     "    mcmc_rank_hist(draws_array, \"a1\", ref_line = TRUE)"
    ]
   },
@@ -1079,13 +1079,13 @@
    ],
    "source": [
     "%%R\n",
-    "#   Look at how the ranking of MCMC samples mixed between chains for Alpha.\n",
+    "#   Look at how the ranking of MCMC samples mixed between chains for Daughters' intercept.\n",
     "    mcmc_rank_hist(draws_array, \"a2\", ref_line = TRUE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
    ],
    "source": [
     "%%R  \n",
-    "#   Evaluating the Effect of Birth Order: The Model Assume the Effect is the Same for Both Mothers' & Daughters'\n",
+    "#   Evaluating the Effect of Birth Order: The Model Assumes the Same Effect for Both Mothers & Daughters.\n",
     "    layout.matrix <- matrix(c(1), nrow = 1, ncol = 1)\n",
     "    layout(mat = layout.matrix) # Widths of the two columns\n",
     "    layout.show(n=2)\n",
@@ -1161,7 +1161,7 @@
    ],
    "source": [
     "%%R\n",
-    "#   Look at how the ranking of MCMC samples mixed between chains for Beta.\n",
+    "#   Look at how the ranking of MCMC samples mixed between chains for Birth Order.\n",
     "    mcmc_rank_hist(draws_array, \"b\", ref_line = TRUE)"
    ]
   },
