Created dataplot_export R function & Isolating MAP estimates.

--- a/Workflow_Demonstration/Analyses/Demonstration_Analysis.ipynb
+++ b/Workflow_Demonstration/Analyses/Demonstration_Analysis.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -720,23 +720,17 @@
      "output_type": "stream",
      "text": [
       "Running MCMC with 4 parallel chains...\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Chain 1 Iteration:    1 / 4000 [  0%]  (Warmup) \n",
       "Chain 2 Iteration:    1 / 4000 [  0%]  (Warmup) \n",
       "Chain 3 Iteration:    1 / 4000 [  0%]  (Warmup) \n",
       "Chain 4 Iteration:    1 / 4000 [  0%]  (Warmup) \n",
-      "Chain 2 Iteration:  500 / 4000 [ 12%]  (Warmup) \n",
       "Chain 4 Iteration:  500 / 4000 [ 12%]  (Warmup) \n",
+      "Chain 2 Iteration:  500 / 4000 [ 12%]  (Warmup) \n",
       "Chain 3 Iteration:  500 / 4000 [ 12%]  (Warmup) \n",
       "Chain 1 Iteration:  500 / 4000 [ 12%]  (Warmup) \n",
-      "Chain 2 Iteration: 1000 / 4000 [ 25%]  (Warmup) \n",
       "Chain 4 Iteration: 1000 / 4000 [ 25%]  (Warmup) \n",
+      "Chain 2 Iteration: 1000 / 4000 [ 25%]  (Warmup) \n",
       "Chain 3 Iteration: 1000 / 4000 [ 25%]  (Warmup) \n",
       "Chain 1 Iteration: 1000 / 4000 [ 25%]  (Warmup) \n",
       "Chain 2 Iteration: 1500 / 4000 [ 37%]  (Warmup) \n",
@@ -752,31 +746,31 @@
       "Chain 1 Iteration: 2000 / 4000 [ 50%]  (Warmup) \n",
       "Chain 1 Iteration: 2001 / 4000 [ 50%]  (Sampling) \n",
       "Chain 4 Iteration: 2500 / 4000 [ 62%]  (Sampling) \n",
-      "Chain 1 Iteration: 2500 / 4000 [ 62%]  (Sampling) \n",
       "Chain 2 Iteration: 2500 / 4000 [ 62%]  (Sampling) \n",
       "Chain 3 Iteration: 2500 / 4000 [ 62%]  (Sampling) \n",
+      "Chain 1 Iteration: 2500 / 4000 [ 62%]  (Sampling) \n",
       "Chain 4 Iteration: 3000 / 4000 [ 75%]  (Sampling) \n",
       "Chain 1 Iteration: 3000 / 4000 [ 75%]  (Sampling) \n",
       "Chain 2 Iteration: 3000 / 4000 [ 75%]  (Sampling) \n",
-      "Chain 3 Iteration: 3000 / 4000 [ 75%]  (Sampling) \n",
       "Chain 4 Iteration: 3500 / 4000 [ 87%]  (Sampling) \n",
+      "Chain 3 Iteration: 3000 / 4000 [ 75%]  (Sampling) \n",
       "Chain 1 Iteration: 3500 / 4000 [ 87%]  (Sampling) \n",
       "Chain 4 Iteration: 4000 / 4000 [100%]  (Sampling) \n",
-      "Chain 4 finished in 20.2 seconds.\n",
+      "Chain 4 finished in 19.9 seconds.\n",
       "Chain 2 Iteration: 3500 / 4000 [ 87%]  (Sampling) \n",
       "Chain 3 Iteration: 3500 / 4000 [ 87%]  (Sampling) \n",
       "Chain 1 Iteration: 4000 / 4000 [100%]  (Sampling) \n",
-      "Chain 1 finished in 22.8 seconds.\n",
+      "Chain 1 finished in 22.7 seconds.\n",
       "Chain 2 Iteration: 4000 / 4000 [100%]  (Sampling) \n",
-      "Chain 2 finished in 24.1 seconds.\n",
+      "Chain 2 finished in 23.7 seconds.\n",
       "Chain 3 Iteration: 4000 / 4000 [100%]  (Sampling) \n",
-      "Chain 3 finished in 24.4 seconds.\n",
+      "Chain 3 finished in 24.1 seconds.\n",
       "\n",
       "All 4 chains finished successfully.\n",
-      "Mean chain execution time: 22.9 seconds.\n",
-      "Total execution time: 24.8 seconds.\n",
+      "Mean chain execution time: 22.6 seconds.\n",
+      "Total execution time: 24.4 seconds.\n",
       "\n",
-      "Processing csv files: /tmp/RtmpJXXfdY/Two_Moms_MultivariateNormal-202501231626-1-43aa43.csv, /tmp/RtmpJXXfdY/Two_Moms_MultivariateNormal-202501231626-2-43aa43.csv, /tmp/RtmpJXXfdY/Two_Moms_MultivariateNormal-202501231626-3-43aa43.csv, /tmp/RtmpJXXfdY/Two_Moms_MultivariateNormal-202501231626-4-43aa43.csv\n",
+      "Processing csv files: /tmp/RtmpQGXO0G/Two_Moms_MultivariateNormal-202501241459-1-337d68.csv, /tmp/RtmpQGXO0G/Two_Moms_MultivariateNormal-202501241459-2-337d68.csv, /tmp/RtmpQGXO0G/Two_Moms_MultivariateNormal-202501241459-3-337d68.csv, /tmp/RtmpQGXO0G/Two_Moms_MultivariateNormal-202501241459-4-337d68.csv\n",
       "\n",
       "Checking sampler transitions treedepth.\n",
       "Treedepth satisfactory for all transitions.\n",
@@ -849,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,10 +902,12 @@
     "# Isolating Posterior Predictive Distributions for Mothers' Family Sizes & Daughters' Family Sizes\n",
     "  m_post_pred <- as.data.frame(sfit, pars = \"posterior_M\")\n",
     "  d_post_pred <- as.data.frame(sfit, pars = \"posterior_D\")\n",
+    "  d_map <- as.data.frame(sfit, pars = \"y\")\n",
     "\n",
     "# Saving Posterior Predictive Distributions\n",
     "  save(m_post_pred, file='Two_Moms_Mother_PostPred.Rdata') \n",
-    "  save(d_post_pred, file='Two_Moms_Daughter_PostPred.Rdata') "
+    "  save(d_post_pred, file='Two_Moms_Daughter_PostPred.Rdata') \n",
+    "  save(d_map, file='Two_Moms_Daughter_MAP.Rdata')"
    ]
   },
   {
@@ -1774,6 +1770,29 @@
    "metadata": {},
    "source": [
     "<div style=\"font-size:12pt; font-weight:bold;\">Error Analysis Using Maximum a Posteriori (MAP) Estimation</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "# Load Data\n",
+    "  setwd(\"/mnt/d/GitHub_Repositories/Netanomics_Analysts_Collaborative_Environment/Workflow_Demonstration/R_functions\")\n",
+    "  load(\"Two_Moms_Data_Summary.Rdata\")\n",
+    "  load(\"Two_Moms_Input_Data.Rdata\")\n",
+    "\n",
+    "# Isolate Daughters' MAP Estimates\n",
+    "  map_estimates <- row.names(rstan_summary)[grepl(\"y\", row.names(rstan_summary))]\n",
+    "  daughter_map_estimates <- map_estimates[grepl(\",2]\", map_estimates)]\n",
+    "  model_predictions <- data.frame(map_est = rstan_summary[(row.names(rstan_summary) %in% daughter_map_estimates), \"mean\"], D = data$D)\n",
+    "  \n",
+    "# Export to Dataplot\n",
+    "  setwd(\"/mnt/d/GitHub_Repositories/Netanomics_Analysts_Collaborative_Environment/Workflow_Demonstration/Dataplot_functions\")\n",
+    "  dataplot_export(model_predictions, \"Two_Moms_MAP\")\n",
+    "  setwd(\"/mnt/d/GitHub_Repositories/Netanomics_Analysts_Collaborative_Environment/Workflow_Demonstration/R_functions\")"
    ]
   },
   {
